--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div class="header">
         <h1>Etch-a-Sketch</h1>
     </div>
-    <div class="grid-container">
+    <div class="grid-container">        
         <div class="buttons">
             <button class="draw">Draw</button>
             <button class="erase">Erase</button>
             <button class="clear">Clear</button>
+            <div class="slider-container">
+                <p class="slider-value"></p>
+                <input class="slider" type="range">
+            </div>
         </div>
     </div>
 
