added color selection

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="container">
         <div class="grid-container">        
             <div class="buttons">
-                <input type="color">
+                <div class="color">
+                    <p>Color: </p>
+                    <input type="color">
+                </div>
                 <button class="draw">Draw</button>
                 <button class="erase">Erase</button>
                 <button class="clear">Clear</button>
